Fixing the footer baselining to align it with the rest of the content.

--- a/html/css/type.less
+++ b/html/css/type.less
@@ -488,7 +488,7 @@ h1, h2, h3, h4, h5, h6 {
 		
 		footer {
 			border-top: 5px solid lighten(@muteColor, 10%);
-			padding-top: @baseline - 1;
+			padding-top: @baseline - 5;
 		}
 	}
 }
